`feat: Implement real-time messaging and socket.io integration for WhatsApp bot`
This commit includes a series of changes to implement real-time messaging and socket.io integration for the WhatsApp bot. The changes include:

* Modifications to the `index.js` file to

--- a/whatsbot/src/app/globals.css
+++ b/whatsbot/src/app/globals.css
@@ -51,3 +51,7 @@ html *::-webkit-scrollbar-thumb {
 .abinha {
   clip-path: polygon(0 0, calc(100% - 20px) 0, 100% 100%, 0% 100%); 
 }
+
+.aba{
+  clip-path: polygon(0 0, 90% 0, 100% 100%, 0 100%);
+}
